# Q4-Learning

01_Generative AI/01_What  is Generative AI/: Generative AI.txt  README.md
01_Generative AI/What  is Generative AI/: README.md
02_FastAPI/02_hello_fastapi/: main.py  pyproject.toml
02_FastAPI/03_FastAPI Parameters/fastdca-p2/: README.md  main.py  pyproject.toml
02_FastAPI/04_dependencies_injection/fastdca-p1/: README.md  main.py  pyproject.toml
02_FastAPI/05_pydantic_validation/: README.md
02_FastAPI/05_pydantic_validation/fastdca-p1/: README.md  main.py  pyproject.toml
02_FastAPI/05_pydantic_validation/fastdca-p1/01_basic_model_validation/: README.md  main.py
02_FastAPI/05_pydantic_validation/fastdca-p1/02_field_constraints/: README.md  main.py
02_FastAPI/05_pydantic_validation/fastdca-p1/03_nested_models/: README.md  main.py
02_FastAPI/06_Task Tracker API/task_tracker_api/: README.md  main.py  models.py  pyproject.toml
02_FastAPI/fastapi/: README.md
Task_07_Understanding Agentic AI Concepts/: README.md.md
projects/Poetry Analyzer with chainlit/: README.md  main.py  pyproject.toml
projects/cli based Poetry Analyzer/: .env  main.py  pyproject.toml
projects/current Market Rate of Crypto Currencies/: .env  main.py  pyproject.toml  tools.py
